--- a/CanstarTest/package.json
+++ b/CanstarTest/package.json
@@ -24,7 +24,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
+    "firebase": "^4.5.1",
+    "promise-polyfill": "6.0.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
